added mysql database and function to retrieve all historical matching prices
